# spreadsheetz

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  prefect.yaml  pyproject.toml
.github/: pull_request_template.md
alembic/: env.py
config/ci/: cascade.json  flows.yaml
config/editor/: settings.json
config/github/: PULL_REQUEST_TEMPLATE.md
docs/: checklists.md  development_standards.md  getting_started.md  glossary.md  implementation_schedule.md  index.md  knowledge_base.md  project_brief.md  project_charter.md  runbook.md  security.md  template_starting_guide.md
docs/api/: README.md  openapi.yaml
docs/architecture/: ai_docs_organization_guide.md  database_schema.md  security.md  system_overview.md
docs/data/: contracts.md  dictionary.md
docs/guides/: corrections_policy.md  development_standards.md  getting_started.md  knowledge_base.md  runbook.md
docs/models/: experiment_plan.md  model_card.md
docs/process/: ai_session_templates.md
docs/project/: glossary.md  implementation_schedule.md  project_charter.md
docs/tools/: cli_agent_coding_guide.md  cli_tool_template.md
notebooks/: 01_mlflow_and_logging_demo.ipynb  02_full_observability_demo.ipynb
scripts/: check_links.py  cli.py  init_session.py  init_template.py  seed_minimal_data.py  test_notebooks.py
session_logs/: 0000-00-00_project_kickoff.md  2025-11-06_repo_cleanup.md  log_template.md
tests/api/: test_endpoints.py
tests/core/: test_config.py
web/: package.json
(+38 files in other folders)
