[project]
name = "vibe-coding-template"
version = "0.1.0"
description = "A template for Vibe Coding data science projects."
authors = [{ name = "Connor Kitchings", email = "connor.kitchings@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "bandit>=1.7.9",
    "mlflow>=2.0",
    "jupyter>=1.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25.0",
    "safety>=2.3.5",
    "openlineage-python>=1.15.0",
    "nbstripout>=0.7.1",
    "nbformat>=5.10.4",
    "prefect>=2.19.0"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.uv.scripts]
docs = "mkdocs serve"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"